Bug 351226 - Triplicate key accelerator in [Collection Fields] window
Summary: Triplicate key accelerator in [Collection Fields] window
Status: RESOLVED FIXED
Alias: None
Product: tellico
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.3.9
Platform: Debian stable Linux
: NOR minor
Target Milestone: ---
Assignee: Robby Stephenson
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2015-08-12 17:27 UTC by Andriy Solonenko
Modified: 2015-08-16 19:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.3.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andriy Solonenko 2015-08-12 17:27:24 UTC
In [Collection Fields] window (invoked from [Collection] menu item)  the accelerator for 'Defaults', 'Default Value' and 'Delete' buttons is bound to the same key ('D'). When pressing 'Alt' + 'D' each of the buttons is focused in sequence. 

Reproducible: Always

Steps to Reproduce:
1. From main menu open [Collection]
2. Click [Collection Fields] 
3. Inside [Collection Fields] window press modifier + 'D' 

Actual Results:  
When clicking 'Alt' + 'D' each of 'Delete', 'Default Value' and 'Defaults' buttons is focused one after another.

Expected Results:  
Each of the mentioned buttons has a separate key accelerator.
Comment 1 Robby Stephenson 2015-08-16 19:38:50 UTC
Git commit 032d0fadbb118ea0dbfc7f5c09beac2159a4fdcb by Robby Stephenson.
Committed on 16/08/2015 at 19:37.
Pushed by rstephenson into branch '2.3'.

Remove accelerator keys for Delete and Default to avoid conflict
FIXED-IN: 2.3.11

M  +13   -1    src/collectionfieldsdialog.cpp

http://commits.kde.org/tellico/032d0fadbb118ea0dbfc7f5c09beac2159a4fdcb