Remove accelerator keys for Delete and Default to avoid conflict

BUG: 351226
FIXED-IN: 2.3.11